[package]
name = "ptries"
version = "0.1.0"
authors = ["Alex Ambrose"]
categories = []
description = "TODO"
documentation = "TODO"
edition = "2024"
keywords = []
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ajambrose/ptries"
rust-version = "1.85"

[lints.clippy]
"undocumented_unsafe_blocks" = "warn"

[features]
default = ["zerocopy"]
zerocopy = ["dep:zerocopy"]

[dependencies]
zerocopy = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
zerocopy = { version = "0.8", default-features = false }
