[package]
name = "radix_trees"
version = "0.1.0"
authors = ["Alex Ambrose"]
categories = ["no-std", "data-structures", "text-processing"]
description = "Various radix tree (trie) data structures."
documentation = "https://docs.rs/radix_trees"
edition = "2024"
keywords = ["trie", "tree", "patricia", "radix", "prefix"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ajambrose/radix_trees"
rust-version = "1.85"

[lints.clippy]
"undocumented_unsafe_blocks" = "warn"

[features]
default = ["zerocopy"]
zerocopy = ["dep:zerocopy"]
std = []

[dependencies]
zerocopy = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
zerocopy = { version = "0.8", default-features = false }
