[package]
name = "radix_trees-fuzz"
version = "0.1.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
libfuzzer-sys = { version = "0.4" }
radix_trees = { path = ".." }

[[bin]]
name = "fuzz_ptree"
path = "fuzz_targets/fuzz_ptree.rs"
test = false
doc = false
bench = false
